fix card background from grey to white and adjust z-index

--- a/frontend/src/components/pokemonData/CardModal.css
+++ b/frontend/src/components/pokemonData/CardModal.css
@@ -8,7 +8,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 2;
+    z-index: 1000;
 }
 .modal-container {
     display: flex;
@@ -20,7 +20,7 @@
     z-index: 10;
     border-radius: 16px;
     box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.04);
-    background-color: #d5d5d5;
+    background-color: white;
     position: fixed;
     padding: 20px;
     margin: 0 auto;
